--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         import kaboom from "https://unpkg.com/kaboom@3000.0.1/dist/kaboom.mjs";
 
 
-        kaboom({
+     /*   kaboom({
 
         });
 
@@ -108,15 +108,273 @@
             })
 
             ;["left", "right"].forEach((key) => {
-                onKeyRelease(key, () => {
-                    if (player.isGrounded() && !isKeyDown("left") && !isKeyDown("right")) {
-                        player.play("idle")
+                 onKeyRelease(key, () => {
+                 if (player.isGrounded() && !isKeyDown("left") && !isKeyDown("right")) {
+                    player.play("idle")
+                }
+               })
+            })
+
+            */
+
+            // simple rpg style walk and talk
+
+
+            kaboom({
+                background: [74, 48, 82],
+            })
+
+            loadSprite("floor", "/images/gfx/floor.png")
+            loadSprite("wall", "/images/gfx/wall.png")
+            loadSprite("door", "/images/gfx/door.png")
+            loadSprite("key", "/images/gfx/key.png")
+            loadSprite("person1", "/images/gfx/npc.png")
+            loadSprite("person2", "/images/gfx/npc.png")
+            loadSprite("guy", "/images/gfx/character.png", {
+                sliceX: 17,
+                sliceY: 8,
+
+                anims: {
+                    "idle": 18,
+
+                    "run": {
+                        from: 18,
+                        to: 19,
+                        speed: 10,
+                        loop: true,
+                    },
+                },
+            })
+
+            // scene("main", (levelIdx) => {
+            //     const SPEED = 320
+            // })
+
+            scene("main", (levelIdx) => {
+
+                const SPEED = 320
+
+
+                const characters = {
+                    "a": {
+                        sprite: "person1",
+                        msg: "collect the key to open the door",
+                    },
+                    "b": {
+                        sprite: "person2",
+                        msg: "after this room, youll win!",
+                    },
+                }
+
+                const levels = [
+                    [
+                        "===|====",
+                        "=      =",
+                        "= $    =",
+                        "=    a =",
+                        "=      =",
+                        "=   @  =",
+                        "========",
+                    ],
+                    [
+                        "--------",
+                        "-      -",
+                        "-   $  -",
+                        "|      -",
+                        "-    b -",
+                        "-  @   -",
+                        "--------",
+                    ],
+                ]
+
+                const level = addLevel(levels[levelIdx], {
+                    tileWidth: 64,
+                    tileHeight: 64,
+                    pos: vec2(64, 64),
+                    tiles: {
+                        "=": () => [
+                            sprite("floor"),
+                            area(),
+                            body({ isStatic: true }),
+                            anchor("center"),
+                        ],
+                        "-": () => [
+                            sprite("wall"),
+                            area(),
+                            body({ isStatic: true }),
+                            anchor("center"),
+                        ],
+                        "$": () => [
+                            sprite("key"),
+                            area(),
+                            anchor("center"),
+                            "key",
+                        ],
+                        "@": () => [
+                            sprite("guy"),
+                            area(),
+                            body(),
+                            anchor("center"),
+                            "player",
+                        ],
+                        "|": () => [
+                            sprite("door"),
+                            area(),
+                            body({ isStatic: true }),
+                            anchor("center"),
+                            "door",
+                        ],
+                    },
+
+
+                    wildcardTile(ch) {
+                        const char = characters[ch]
+                        if (char) {
+                            return [
+                                sprite(char.sprite),
+                                area(),
+                                body({ isStatic: true }),
+                                anchor("center"),
+                                "character",
+                                { msg: char.msg },
+                            ]
+                        }
+                    },
+                })
+
+                // get the player game obj by tag
+                const player = level.get("player")[0]
+
+                function addDialog() {
+                    const h = 160
+                    const pad = 16
+                    const bg = add([
+                        pos(0, height() - h),
+                        rect(width(), h),
+                        color(0, 0, 0),
+                        z(100),
+                    ])
+                    const txt = add([
+                        text("", {
+                            width: width(),
+                        }),
+                        pos(0 + pad, height() - h + pad),
+                        z(100),
+                    ])
+                    bg.hidden = true
+                    txt.hidden = true
+                    return {
+                        say(t) {
+                            txt.text = t
+                            bg.hidden = false
+                            txt.hidden = false
+                        },
+                        dismiss() {
+                            if (!this.active()) {
+                                return
+                            }
+                            txt.text = ""
+                            bg.hidden = true
+                            txt.hidden = true
+                        },
+                        active() {
+                            return !bg.hidden
+                        },
+                        destroy() {
+                            bg.destroy()
+                            txt.destroy()
+                        },
+                    }
+                }
+
+                let hasKey = false
+                const dialog = addDialog()
+
+                player.onCollide("key", (key) => {
+                    destroy(key)
+                    hasKey = true
+                })
+
+                player.onCollide("door", () => {
+                    if (hasKey) {
+                        if (levelIdx + 1 < levels.length) {
+                            go("main", levelIdx + 1)
+                        } else {
+                            go("win")
+                        }
+                    } else {
+                        dialog.say("you got no key!")
                     }
                 })
+
+                player.onGround(() => {
+                if (!isKeyDown("left") && !isKeyDown("right")) {
+                    player.play("idle")
+                } else {
+                    player.play("run")
+                }
+            })
+
+            player.onAnimEnd((anim) => {
+                if (anim === "idle") {
+                }
             })
 
 
+            onKeyDown("left", () => {
+                player.move(-SPEED, 0)
+                player.flipX = true
+                if (player.isGrounded() && player.curAnim() !== "run") {
+                    player.play("run")
+                }
+            })
 
-        </script>
+            onKeyDown("right", () => {
+                player.move(SPEED, 0)
+                player.flipX = false
+                if (player.isGrounded() && player.curAnim() !== "run") {
+                    player.play("run")
+                }
+            })
+
+            ;["left", "right"].forEach((key) => {
+                 onKeyRelease(key, () => {
+                 if (player.isGrounded() && !isKeyDown("left") && !isKeyDown("right")) {
+                    player.play("idle")
+                }
+               })
+            })
+
+        })
+            //     const dirs = {
+            //         "left": LEFT,
+            //         "right": RIGHT,
+            //         "up": UP,
+            //         "down": DOWN,
+            //     }
+
+            //     for (const dir in dirs) {
+            //         onKeyPress(dir, () => {
+            //             dialog.dismiss()
+            //         })
+            //         onKeyDown(dir, () => {
+            //             player.move(dirs[dir].scale(SPEED))
+            //         })
+            //     }
+
+            // })
+
+            scene("win", () => {
+                add([
+                    text("You Win!"),
+                    pos(width() / 2, height() / 2),
+                    anchor("center"),
+                ])
+            })
+
+            go("main", 0)
+
+
+         </script>
     </body>
 </html>
