added the files for the sprites i made

--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                 background: [74, 48, 82],
             })
 
-            loadSprite("floor", "/images/gfx/floor.png")
-            loadSprite("wall", "/images/gfx/wall.png")
-            loadSprite("door", "/images/gfx/door.png")
-            loadSprite("key", "/images/gfx/key.png")
-            loadSprite("person1", "/images/gfx/npc.png")
-            loadSprite("person2", "/images/gfx/npc.png")
-            loadSprite("guy", "/images/gfx/character.png", {
+            loadSprite("floor", "images/gfx/floor.png")
+            loadSprite("wall", "images/gfx/wall.png")
+            loadSprite("door", "images/gfx/door.png")
+            loadSprite("key", "images/gfx/key.png")
+            loadSprite("person1", "images/gfx/npc.png")
+            loadSprite("person2", "images/gfx/npc.png")
+            loadSprite("guy", "images/gfx/character.png", {
                 sliceX: 17,
                 sliceY: 8,
 
